# smart-led-effects-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/strip/: bounce.rs  breathe.rs  christmas.rs  collision.rs  cycle.rs  cylon.rs  effects_trait.rs  fire.rs  meteor.rs  mod.rs  morse.rs  progress.rs  rainbow.rs  running_lights.rs  snow_sparkle.rs  strobe.rs  timer.rs  twinkle.rs  wipe.rs
src/utils/: hsv_to_srgb.rs  mod.rs  srgbu8_to_hsv.rs
