[package]
name = "smart_led_effects"
version = "0.1.8"
edition = "2021"
authors = ["Philip Barlow"]
description = "A collection of effects for LED strips"
license = "MIT"
repository = "https://github.com/bitbrain-za/smart-led-effects-rs"
homepage = "https://github.com/bitbrain-za/smart-led-effects-rs"
readme = "README.md"
keywords = ["ws2812", "neopixel", "smart-leds"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.7.3"
rand = "0.8.5"
